updated logging api schemas a little bit
